Resized book-container and fixed spacing

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,7 +9,7 @@
 	font-family: 'Playfair Display';
 	src: url(../assets/PlayfairDisplay/PlayfairDisplay-Bold.woff2);
 	font-weight: 600;
-	font-style: normal;
+	font-style: bold;
 }
 
 @font-face {
