--- a/css/style.css
+++ b/css/style.css
@@ -107,11 +107,15 @@ html {
 	flex-flow: column nowrap;
 	justify-content: space-between;
 	align-items: center;
-	width: 15rem;
-	height: 21.875rem;
+	width: 16rem;
+	height: 22.875rem;
 	border: var(--border-black);
 	border-radius: var(--border-radius-sm-medium);
 	padding: var(--spacing-small);
+}
+
+.book__info {
+	width: 12.5rem;
 }
 
 .book__container:hover {
@@ -130,12 +134,18 @@ html {
 	display: flex;
 }
 
-.book__author, .book__title {
+.book__author {
 	font-size: var(--font-size-base);
 }
 
+.book__title {
+	font-size: var(--font-size-small);
+
+}
+
 .add__button {
-	width: 10.625rem;
+	margin-top: 1rem;
+	width: 12.5rem;
 	height: 2.5rem;
 	background: var(--color-button-primary);
 	color: var(--color-primary);
