--- a/css/variables.css
+++ b/css/variables.css
@@ -2,6 +2,7 @@
 	--font-leading-base: 1rem;
 
 	--font-size-base: var(--font-leading-base);
+	--font-size-small: 1.2rem;
 	--font-size-sm-medium: 2rem;
 	--font-size-headline: 6rem;
 
